--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.3.1",
+    "@reduxjs/toolkit": "^1.7.1",
+    "firebase": "^9.6.4",
+    "firebase-admin": "^10.0.2",
+    "formik": "^2.2.9",
     "next": "latest",
+    "next-firebase-auth": "^1.0.0-canary.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-dropzone": "^11.5.1",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-slick": "^0.28.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "@types/react-icons": "^3.0.0",
+    "@types/react-slick": "^0.23.8",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
