--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "@mui/material": "^5.3.1",
     "@reduxjs/toolkit": "^1.7.1",
     "firebase": "^9.6.4",
-    "firebase-admin": "^10.0.2",
     "formik": "^2.2.9",
+    "framer-motion": "^6.2.3",
     "next": "latest",
-    "next-firebase-auth": "^1.0.0-canary.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
+    "react-firebase-hooks": "^5.0.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "react-slick": "^0.28.1"
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
