--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --debug",
     "start": "next start"
   },
   "dependencies": {
@@ -28,6 +28,8 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-slick": "^0.23.8",
     "autoprefixer": "^10.4.0",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.9",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
