--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.5",
     "@mui/material": "^5.3.1",
     "@reduxjs/toolkit": "^1.7.1",
+    "@tailwindcss/forms": "^0.4.0",
     "firebase": "^9.6.4",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.3",
@@ -20,13 +23,15 @@
     "react-firebase-hooks": "^5.0.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "textarea-caret": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "@types/react-icons": "^3.0.0",
     "@types/react-slick": "^0.23.8",
+    "@types/textarea-caret": "^3.0.1",
     "autoprefixer": "^10.4.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
